25 April 2013: Wouter
	- Implement max-udp-size config option, default 4096 (thanks
	  Daisuke Higashi).
	- Robust checks on dname validity from rdata for dname compare.
	- updated iana portlist.

19 April 2013: Wouter
	- Fixup snprintf return value usage, fixed libunbound_get_option.

18 April 2013: Wouter
	- fix bug #491: pick program name (0th argument) as syslog identity.
	- own implementation of compat/snprintf.c.

15 April 2013: Wouter
	- Fix so that for a configuration line of include: "*.conf" it is not
	  an error if there are no files matching the glob pattern.
	- unbound-anchor review: BIO_write can return 0 successfully if it
	  has successfully appended a zero length string.

11 April 2013: Wouter
	- Fix queries leaking up for stubs and forwards, if the configured
	  nameservers all fail to answer.

10 April 2013: Wouter
	- code improve for minimal responses, small speed increase.

9 April 2013: Wouter
	- updated iana portlist.
	- Fix crash in previous private address fixup of 22 March.

28 March 2013: Wouter
	- Make reverse zones easier by documenting the nodefault statements
	  commented-out in the example config file.

26 March 2013: Wouter
	- more fixes to lookup3.c endianness detection.

25 March 2013: Wouter
	- #492: Fix endianness detection, revert to older lookup3.c detection
	  and put new detect lines after previous tests, to avoid regressions
	  but allow new detections to succeed.
	  And add detection for machine/endian.h to it.

22 March 2013: Wouter
	- Fix resolve of names that use a mix of public and private addresses.
	- iana portlist update.
	- Fix makedist for new svn for -d option.
	- unbound.h header file has UNBOUND_VERSION_MAJOR define.
	- Fix windows RSRC version for long version numbers.

21 March 2013: Wouter
	- release 1.4.20
	- trunk has 1.4.21
	- committed libunbound version 4:1:2 for binary API updated in 1.4.20
	- install copy of unbound-control.8 man page for unbound-control-setup

14 March 2013: Wouter